--- a/area.html
+++ b/area.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Calculate Area of triangle</title>
 </head>
 
 <body>
     <nav>
-        <a href="index.html">Is Triangle?</a>
-        <a href="hypotenuse.html">Calculate hypotenuse</a>
-        <a href="quiz.html">Triangle quiz</a>
+        <a href="index.html ">Is Triangle? </a>
+        <a href="hypotenuse.html ">Calculate hypotenuse </a>
+        <a href="quiz.html ">Triangle quiz</a>
     </nav>
     <h1>Calculate area of Triangle</h1>
     <label for="base">Base:</label>
